# ChangeLog for dev-perl/wxperl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/wxperl/ChangeLog,v 1.40 2010/08/13 07:30:45 tove Exp $

  13 Aug 2010; Torsten Veller <tove@gentoo.org> -wxperl-0.91.ebuild,
  -wxperl-0.97.01.ebuild:
  Cleanup

  15 Jun 2010; Torsten Veller <tove@gentoo.org> wxperl-0.97.02.ebuild:
  Stable on amd64 and x86 (#323529)

*wxperl-0.97.02 (06 May 2010)

  06 May 2010; Torsten Veller <tove@gentoo.org> +wxperl-0.97.02.ebuild:
  Version bump

  09 Apr 2010; Torsten Veller <tove@gentoo.org> -wxperl-0.94.ebuild,
  -wxperl-0.97.ebuild:
  Cleanup

*wxperl-0.97.01 (11 Feb 2010)

  11 Feb 2010; Torsten Veller <tove@gentoo.org> +wxperl-0.97.01.ebuild:
  Version bump

  10 Feb 2010; Torsten Veller <tove@gentoo.org> -wxperl-0.95.ebuild,
  -wxperl-0.96.ebuild:
  Cleanup

*wxperl-0.97 (10 Feb 2010)

  10 Feb 2010; Torsten Veller <tove@gentoo.org> +wxperl-0.97.ebuild:
  Version bump

*wxperl-0.96 (12 Jan 2010)

  12 Jan 2010; Torsten Veller <tove@gentoo.org> +wxperl-0.96.ebuild:
  Version bump

*wxperl-0.95 (26 Dec 2009)

  26 Dec 2009; Torsten Veller <tove@gentoo.org> +wxperl-0.95.ebuild:
  Version bump

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -wxperl-0.93.ebuild:
  Cleanup

*wxperl-0.94 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +wxperl-0.94.ebuild:
  Version bump via perl-bump experimental tool.

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -wxperl-0.92.ebuild:
  Cleanup

*wxperl-0.93 (25 Sep 2009)

  25 Sep 2009; Torsten Veller <tove@gentoo.org> +wxperl-0.93.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -wxperl-0.57.ebuild:
  Cleanup

  06 Sep 2009; Markus Meier <maekke@gentoo.org> wxperl-0.91.ebuild:
  amd64 stable, bug #280501

  02 Sep 2009; Christian Faulhammer <fauli@gentoo.org> wxperl-0.91.ebuild:
  stable x86, bug 280501

  14 Aug 2009; Raúl Porcel <armin76@gentoo.org> wxperl-0.91.ebuild:
  Drop ia64 keyword
