@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/wxperl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/wxperl/ChangeLog,v 1.40 2010/08/13 07:30:45 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/wxperl/ChangeLog,v 1.41 2010/08/23 07:39:02 tove Exp $
+
+*wxperl-0.98 (23 Aug 2010)
+
+  23 Aug 2010; Torsten Veller <tove@gentoo.org> +wxperl-0.98.ebuild:
+  Version bump
 
   13 Aug 2010; Torsten Veller <tove@gentoo.org> -wxperl-0.91.ebuild,
   -wxperl-0.97.01.ebuild:
